--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
             <div class="game-card" onclick="window.location.href='crossy_road.html'">
                 <img src="portada_crossy_road.jpg" alt="Neon Crossy Road">
             </div>
-            <div class="game-card" onclick="seleccionarJuego('Mi Juego Dos')">
-                <img src="Gemini_Generated_Image_bs5ccsbs5ccsbs5c (1).png" alt="Portada Juego Dos">
+           <div class="game-card" onclick="window.location.href='spell_caster.html'">
+                <img src="Gemini_Generated_Image_bs5ccsbs5ccsbs5c (1).png" alt="Spell Caster">
             </div>
             <div class="game-card" onclick="seleccionarJuego('Mi Juego Tres')">
                 <img src="Gemini_Generated_Image_bs5ccsbs5ccsbs5c (1).png" alt="Portada Juego Tres">
