--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
            <div class="game-card" onclick="window.location.href='spell_caster.html'">
                 <img src="portada_spell_caster.jpg" alt="Spell Caster">
              </div>
-            <div class="game-card" onclick="window.location.href='tunnel_run.html'">
-    <img src="portada_tunnel_run.jpg" alt="Neon Tunnel Run">
+            <div class="game-card" onclick="window.location.href='chrono_echo.html'">
+    <img src="portada_chrono.jpg" alt="Chrono Echo">
          </div>
         </div>
             <div class="game-card" onclick="seleccionarJuego('Puzzle Mágico')">
