--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
                 <a href="javascript:void(0)" class="sub-filter" data-tag="clasico">Clásicos</a>
             </nav>
             <div class="header-icons">
-                <span class="icon">&#9776;</span> <span class="icon">&#8942;</span> </div>
+                <span class="icon">&#9776;</span>
+                <span class="icon">&#8942;</span>
+            </div>
         </div>
 
         <h2 class="section-title">Juegos Destacados</h2>
