--- a/index.html
+++ b/index.html
@@ -109,6 +109,38 @@
                 </div>
             </div>
 
+            <div class="game-card" data-category="puzzle" data-tag="nuevo" onclick="window.location.href='hextris.html'">
+                <img src="portada_hextris.jpg" alt="Hextris">
+                <div class="card-info">
+                    <h3>Hextris</h3>
+                    <span>Puzzle Rápido</span>
+                </div>
+            </div>
+
+            <div class="game-card" data-category="accion" data-tag="popular" onclick="window.location.href='minecraft.html'">
+                <img src="portada_minecraft.jpg" alt="Minecraft Web">
+                <div class="card-info">
+                    <h3>Minecraft Web</h3>
+                    <span>Mundo Abierto</span>
+                </div>
+            </div>
+
+            <div class="game-card" data-category="accion" data-tag="clasico" onclick="window.location.href='flappy.html'">
+                <img src="portada_flappy.jpg" alt="Flappy Bird">
+                <div class="card-info">
+                    <h3>Flappy Bird</h3>
+                    <span>Arcade Difícil</span>
+                </div>
+            </div>
+
+            <div class="game-card" data-category="accion" data-tag="clasico" onclick="window.location.href='pacman.html'">
+                <img src="portada_pacman.jpg" alt="Pacman">
+                <div class="card-info">
+                    <h3>Pacman</h3>
+                    <span>El Rey Retro</span>
+                </div>
+            </div>
+
         </div>
     </section>
 
