--- a/index.html
+++ b/index.html
@@ -17,12 +17,16 @@
             <div class="logo">
                 <a href="#" class="logo-text">B-BOX <span>GAMES</span></a>
             </div>
+            
             <nav class="nav-links">
                 <a href="#" class="active">Inicio</a>
                 <a href="#juegos">Juegos</a>
                 <a href="ranking.html">Ranking</a>
+                
                 <div id="user-area" style="display: inline-block; margin-left: 20px;">
-                    <button id="loginBtn" class="btn" style="background: linear-gradient(45deg, #4285F4, #34A853); border:none; padding: 8px 20px; font-weight:bold; border-radius: 20px; color: white; cursor: pointer;">Ingresar</button>
+                    <button id="loginBtn" class="btn" style="background: linear-gradient(45deg, #4285F4, #34A853); border:none; padding: 8px 20px; font-weight:bold; border-radius: 20px; color: white; cursor: pointer;">
+                        Ingresar
+                    </button>
                     <div id="userInfo" style="display: none; align-items: center; gap: 10px;">
                         <img id="userPhoto" src="" alt="User" style="width: 35px; height: 35px; border-radius: 50%; border: 2px solid #00fff2; box-shadow: 0 0 10px #00fff2;">
                         <div style="display: flex; flex-direction: column; align-items: flex-start; line-height: 1.2;">
@@ -38,10 +42,13 @@
 
     <section class="hero-section">
         <canvas id="hero-particles" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none;"></canvas>
+
         <div class="hero-content">
             <h1>JUEGA SIN <span style="color: #00fff2;">LÍMITES</span></h1>
             <p>La plataforma de minijuegos arcade definitiva. Compite, sube de nivel y domina el ranking mundial.</p>
-            <button onclick="document.getElementById('juegos').scrollIntoView()" style="margin-top: 30px; padding: 12px 30px; font-size: 1.1rem; background: #00fff2; color: #000; border: none; border-radius: 30px; font-weight: bold; cursor: pointer; box-shadow: 0 0 20px rgba(0, 255, 242, 0.4); transition: transform 0.2s;">EXPLORAR JUEGOS ▼</button>
+            <button onclick="document.getElementById('juegos').scrollIntoView()" style="margin-top: 30px; padding: 12px 30px; font-size: 1.1rem; background: #00fff2; color: #000; border: none; border-radius: 30px; font-weight: bold; cursor: pointer; box-shadow: 0 0 20px rgba(0, 255, 242, 0.4); transition: transform 0.2s;">
+                EXPLORAR JUEGOS ▼
+            </button>
         </div>
     </section>
 
@@ -105,6 +112,14 @@
                 </div>
             </div>
 
+            <div class="game-card" data-category="accion" data-tag="popular" data-game-id="escape">
+                <div class="fav-btn" onclick="toggleFav(this, 'escape', event)">♥</div>
+                <div onclick="window.location.href='escape.html'">
+                    <img src="portada_escape.jpg" alt="Escape Road">
+                    <div class="card-info"><h3>Escape Road</h3><span style="color:#ffcc00">★ Viral</span></div>
+                </div>
+            </div>
+
             <div class="game-card" data-category="puzzle" data-tag="nuevo" data-game-id="hextris">
                 <div class="fav-btn" onclick="toggleFav(this, 'hextris', event)">♥</div>
                 <div onclick="window.location.href='hextris.html'">
@@ -141,11 +156,11 @@
     </section>
 
     <div id="aliasModal" class="modal-overlay">
-        <div class="modal-content" style="border: 1px solid #7000ff; box-shadow: 0 0 40px rgba(112, 0, 255, 0.4); padding: 30px; max-width: 400px; width: 90%;">
+        <div class="modal-content" style="border: 1px solid #7000ff; box-shadow: 0 0 40px rgba(112, 0, 255, 0.4); padding: 30px; max-width: 400px; width: 90%; display: flex; flex-direction: column; align-items: center;">
             <h3 style="color: #fff; margin: 0 0 20px 0; text-transform: uppercase; letter-spacing: 1px;">Editar Perfil</h3>
-            <label style="color: #aaa; font-size: 12px; display: block; margin-bottom: 5px; text-align: left;">GAMERTAG</label>
+            <label style="color: #aaa; font-size: 12px; display: block; margin-bottom: 5px; text-align: left; width: 100%;">GAMERTAG</label>
             <input type="text" id="newAliasInput" class="search-input" style="text-align: center; margin-bottom: 20px; font-weight: bold; color: #00fff2; box-sizing: border-box;" placeholder="Tu Nombre..." maxlength="12" autocomplete="off">
-            <label style="color: #aaa; font-size: 12px; display: block; margin-bottom: 10px; text-align: left;">ELIGE TU AVATAR</label>
+            <label style="color: #aaa; font-size: 12px; display: block; margin-bottom: 10px; text-align: left; width: 100%;">ELIGE TU AVATAR</label>
             <div class="avatar-grid" style="display: flex; gap: 10px; justify-content: center; margin-bottom: 25px; flex-wrap: wrap;">
                 <img src="" id="googleAvatarOption" class="avatar-option selected" style="width: 50px; height: 50px; border-radius: 50%; border: 2px solid #00fff2; cursor: pointer; padding: 2px;">
                 <img src="https://api.dicebear.com/9.x/avataaars/svg?seed=Felix" class="avatar-option" data-src="https://api.dicebear.com/9.x/avataaars/svg?seed=Felix">
@@ -167,7 +182,7 @@
         <div class="chat-input-area"><input type="text" id="chatInput" placeholder="Escribe algo..." autocomplete="off"><button id="sendBtn">➤</button></div>
     </div>
 
-    <footer style="text-align: center; padding: 40px; color: #444; font-size: 0.8rem; margin-top: 40px;">&copy; 2025 B-BOX Games.</footer>
+    <footer style="text-align: center; padding: 40px; color: #444; font-size: 0.8rem; margin-top: 40px;">&copy; 2025 B-BOX Games. Creado con pasión.</footer>
 
     <script type="module" src="script.js"></script>
 
