--- a/escape.html
+++ b/escape.html
@@ -36,7 +36,7 @@
         </div>
     </header>
 
-    <iframe src="https://cdn.jsdelivr.net/gh/abisdbest/classroom.google.com@45b2d69c626dc365753f6922d2c48c4075683ef5/drive.google.com/escape%20road/index.html" class="game-frame" allowfullscreen></iframe>
+    <iframe src="https://tbg95.github.io/escape-road/" class="game-frame" allowfullscreen></iframe>
 
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
