--- a/escape.html
+++ b/escape.html
@@ -36,7 +36,7 @@
         </div>
     </header>
 
-    <iframe src="https://tbg95.github.io/escape-road/" class="game-frame" allowfullscreen></iframe>
+    <iframe src="https://webglmath.github.io/escape-road/" class="game-frame" allowfullscreen></iframe>
 
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
