--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
                 </div>
             </div>
 
-            <div class="game-card" data-category="accion" data-tag="popular" data-game-id="escape">
-                <div class="fav-btn" onclick="toggleFav(this, 'escape', event)">♥</div>
-                <div onclick="window.location.href='escape.html'">
-                    <img src="portada_escape.jpg" alt="Escape Road">
-                    <div class="card-info"><h3>Escape Road</h3><span style="color:#ffcc00">★ Viral</span></div>
+            <div class="game-card" data-category="accion" data-tag="popular" onclick="window.location.href='slope.html'">
+                <img src="portada_slope.jpg" alt="Slope">
+                <div class="card-info">
+                    <h3>Slope</h3>
+                    <span style="color:#00ff88">★ Speedrun</span>
                 </div>
             </div>
 
