--- a/drift.html
+++ b/drift.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Escape Road | B-BOX Games</title>
+    <title>Drift Boss | B-BOX Games</title>
     <link rel="icon" type="image/png" href="icon.png">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;900&display=swap" rel="stylesheet">
@@ -36,7 +36,7 @@
         </div>
     </header>
 
-    <iframe src="https://rawcdn.githack.com/3kh0/3kh0-assets/a34e4404674107014819a685dfbf4b20e9254dfc/escape-road/index.html" class="game-frame" allowfullscreen></iframe>
+    <iframe src="https://html5.gamedistribution.com/a9e613a6b8744558a063c96546c4109e/" class="game-frame" allowfullscreen></iframe>
 
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
@@ -63,6 +63,5 @@
             }
         });
     </script>
-
 </body>
 </html>
