--- a/drift.html
+++ b/drift.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Escape Road | B-BOX Games</title>
+    <title>Drive Mad | B-BOX Games</title>
     <link rel="icon" type="image/png" href="icon.png">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;900&display=swap" rel="stylesheet">
@@ -36,7 +36,7 @@
         </div>
     </header>
 
-    <iframe src="https://bitlifeonline.github.io/escape-road/" class="game-frame" allowfullscreen></iframe>
+    <iframe src="https://html5.gamedistribution.com/f2afeb09559d4ce48c6b32250f65a32b/" class="game-frame" allowfullscreen></iframe>
 
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
