--- a/index.html
+++ b/index.html
@@ -116,13 +116,16 @@
                 </div>
             </div>
 
-            <div class="game-card" data-category="accion" data-tag="popular" data-game-id="escape">
-                <div class="fav-btn" onclick="toggleFav(this, 'escape', event)">♥</div>
-                <div onclick="window.location.href='drift.html'">
-                    <img src="portada_drift.jpg" alt="Escape Road">
-                    <div class="card-info"><h3>Escape Road</h3><span style="color:#ffcc00">★ Viral</span></div>
-                </div>
-            </div>
+           <div class="game-card" data-category="accion" data-tag="popular" data-game-id="escape">
+    <div class="fav-btn" onclick="toggleFav(this, 'escape', event)">♥</div>
+    <div onclick="window.location.href='escape.html'">
+        <img src="portada_escape.jpg" alt="Escape Road">
+        <div class="card-info">
+            <h3>Escape Road</h3>
+            <span style="color:#ffcc00">★ Viral</span>
+        </div>
+    </div>
+</div>
 
             <div class="game-card" data-category="puzzle" data-tag="nuevo" data-game-id="hextris">
                 <div class="fav-btn" onclick="toggleFav(this, 'hextris', event)">♥</div>
