--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
     </section>
 
-    <section id="juegos" class="main-content container reveal">
+    <section id="juegos" class="main-content container">
         
         <div style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap;">
             <div class="category-buttons">
