--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <meta name="theme-color" content="#050505">
 </head>
 <body>
+
+    <div id="toast-container"></div>
     
     <header class="navbar">
         <div class="container">
