--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <header class="navbar">
         <div class="container">
             <div class="logo">
-                <a href="#" class="logo-text">
-                    B-BOX <span>GAMES</span>
-                </a>
-            </div>
+    <a href="#" class="logo-text">
+        B-BOX <span>GAMES</span>
+    </a>
+</div>
             
             <nav class="nav-links">
                 <a href="#" class="active">Inicio</a>
@@ -55,13 +55,14 @@
     <section class="hero-section">
         <canvas id="hero-particles" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none;"></canvas>
 
-        <div class="hero-content">
-            <h1>JUEGA SIN <span style="color: #00fff2;">LÍMITES</span></h1>
-            <p>La plataforma de minijuegos arcade definitiva. Compite, sube de nivel y domina el ranking mundial.</p>
-            <button onclick="document.getElementById('juegos').scrollIntoView()" style="margin-top: 30px; padding: 12px 30px; font-size: 1.1rem; background: #00fff2; color: #000; border: none; border-radius: 30px; font-weight: bold; cursor: pointer; box-shadow: 0 0 20px rgba(0, 255, 242, 0.4); transition: transform 0.2s;">
-                EXPLORAR JUEGOS ▼
-            </button>
-        </div>
+       <div class="hero-content">
+    <h1>JUEGA SIN <span>LÍMITES</span></h1>
+    <p>La plataforma de minijuegos arcade definitiva. Compite, sube de nivel y domina el ranking mundial.</p>
+    
+    <button class="hero-btn" onclick="document.getElementById('juegos').scrollIntoView({behavior: 'smooth'})">
+        EXPLORAR JUEGOS ▼
+    </button>
+</div>
     </section>
 
     <section id="juegos" class="main-content container">
