--- a/ranking.html
+++ b/ranking.html
@@ -16,6 +16,10 @@
             min-height: 80vh;
         }
     </style>
+    <script>
+      window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+    </script>
+    <script defer src="/_vercel/insights/script.js"></script>
 </head>
 <body>
 
